@@ -1,3 +1,8 @@
+Wed Feb 25 14:18:26 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
+
+	* string.c: [DOC] Add missing documentation around String#chomp.
+	  Patchby @stderr [ci skip][fix GH-780]
+
 Sat Feb 21 09:48:48 2015  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/uri/generic.rb (URI::Generic.build):
